clean and big rework