@@ -1,24 +1,22 @@
 package codebuddies.MealooApp.services;
 
 import codebuddies.MealooApp.dataproviders.IngredientProvider;
-import codebuddies.MealooApp.dto.ProductDTO;
-import codebuddies.MealooApp.entities.meal.Meal;
+import codebuddies.MealooApp.dto.IngredientForMealDTO;
+import codebuddies.MealooApp.dto.MealDTO;
+import codebuddies.MealooApp.dto.ProductForIngredientDTO;
 import codebuddies.MealooApp.entities.meal.MealDifficulty;
-import codebuddies.MealooApp.entities.product.Ingredient;
-import codebuddies.MealooApp.entities.product.Macronutrients;
-import codebuddies.MealooApp.entities.product.Product;
-import codebuddies.MealooApp.entities.product.ProductType;
-import org.hamcrest.MatcherAssert;
-import org.hamcrest.Matchers;
+import codebuddies.MealooApp.entities.meal.MealMacronutrients;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
-import org.modelmapper.ModelMapper;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -33,57 +31,51 @@ import static org.mockito.Mockito.verify;
 @ExtendWith(SpringExtension.class)
 class IngredientServiceTest {
 
-    ModelMapper modelMapper;
-
     @Mock
     IngredientProvider ingredientProvider;
 
     @Mock
     ProductService productService;
 
+    ProductForIngredientDTO product1;
+    ProductForIngredientDTO product2;
 
-    Product productEntity1;
-    Product productEntity2;
+    IngredientForMealDTO ingredient1;
+    IngredientForMealDTO ingredient2;
 
-    ProductDTO product1;
+    List<IngredientForMealDTO> ingredientList;
 
-    Ingredient ingredient1;
-    Ingredient ingredient2;
-
-    List<Ingredient> ingredientList;
-
-    Meal meal;
+    MealDTO meal;
 
     IngredientService ingredientService;
 
     @BeforeEach
-    void setUp(){
-        modelMapper = new ModelMapper();
+    void setUp() {
 
-        productEntity1 = new Product("Carrot", 5.0
-                ,new Macronutrients(1,10,0), 41, ProductType.VEGETABLES);
-        productEntity2 = new Product("Apple", 6.0,
-                new Macronutrients(0,14,0), 52, ProductType.FRUITS);
+        product1 = new ProductForIngredientDTO("Carrot", 5.0, 41);
+        product2 = new ProductForIngredientDTO("Apple", 6.0, 56);
 
-        product1 = modelMapper.map(productEntity1, ProductDTO.class);
+        ingredient1 = new IngredientForMealDTO(product1, 200);
+        ingredient2 = new IngredientForMealDTO(product2, 300);
 
-        ingredient1 = new Ingredient(200, productEntity1);
+        ingredientList = new ArrayList<>();
+        ingredientList.add(ingredient1);
+        ingredientList.add(ingredient2);
 
-        ingredient2 = new Ingredient(300, productEntity2);
-
-        ingredientList = List.of(ingredient1, ingredient2);
-
-        meal = new Meal("HealthyProduct", ingredientList, MealDifficulty.EASY);
+        meal = new MealDTO("HealthyProduct", ingredientList, 2.2, MealDifficulty.EASY
+                , new MealMacronutrients(2, 40, 1), 192, "Recipe", Collections.emptyList());
 
         ingredientService = new IngredientService(ingredientProvider, productService);
     }
 
     @Test
-    void shouldCreateIngredient(){
+    void shouldCreateIngredient() {
         //given
         given(ingredientProvider.createIngredient(product1, 200)).willReturn(ingredient1);
+
         //when
-        Ingredient result = ingredientService.createIngredient(product1, 200);
+        IngredientForMealDTO result = ingredientService.createIngredient(product1, 200);
+
         //then
         assertAll(
                 () -> verify(ingredientProvider, times(1))
@@ -94,20 +86,23 @@ class IngredientServiceTest {
     }
 
     @Test
-    void shouldCreateIngredients(){
+    void shouldCreateIngredients() {
         //given
-        given(ingredientProvider.createIngredient(product1, 200)).willReturn(ingredient1);
-        given(productService.getProductByName("Carrot")).willReturn(product1);
+        given(productService.getProductForIngredientByName("Carrot")).willReturn(product1);
+        given(productService.getProductForIngredientByName("Apple")).willReturn(product2);
+
         //when
         ingredientService.createIngredients(meal);
+
         //then
-        verify(productService, times(2)).getProductByName(any());
+        verify(productService, times(2)).getProductForIngredientByName(any());
     }
 
     @Test
-    void shouldThrowIllegalArgumentExceptionIfIngredientAmountIsLessThanZero(){
+    void shouldThrowIllegalArgumentExceptionIfIngredientAmountIsLessThanZero() {
         //given + when
         meal.getIngredients().get(0).setAmount(-200);
+
         //then
         assertThrows(IllegalArgumentException.class, () ->
                 ingredientService.createIngredients(meal));
